added endpoint for download csv of individuals
