# src/swagger.json
@@ -24,71 +24,6 @@
     }
   },
   "paths": {
-    "/cartodb/pha-individual/{id}": {
-      "put": {
-        "tags": ["CartoDB"],
-        "summary": "Update a individual",
-        "security": [
-          {
-            "ApiKey": []
-          }
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "description": "id of individual to update.",
-            "schema": {
-              "$ref": "#/definitions/id"
-            }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/definitions/Pha-individual"
-              }
-            }
-          }
-        },
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Failed. Bad post data."
-          }
-        }
-      },
-      "get": {
-        "tags": ["CartoDB"],
-        "summary": "Get a individual",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "description": "id of individual to update.",
-            "schema": {
-              "$ref": "#/definitions/id"
-            }
-          }
-        ],
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Failed. Bad post data."
-          }
-        }
-      }
-    },
     "/cartodb/pha-individual": {
       "post": {
         "tags": ["CartoDB"],
@@ -162,6 +97,101 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/cartodb/pha-individual/{id}": {
+      "put": {
+        "tags": ["CartoDB"],
+        "summary": "Update a individual",
+        "security": [
+          {
+            "ApiKey": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "id of individual to update.",
+            "schema": {
+              "$ref": "#/definitions/id"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Pha-individual"
+              }
+            }
+          }
+        },
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Failed. Bad post data."
+          }
+        }
+      },
+      "get": {
+        "tags": ["CartoDB"],
+        "summary": "Get a individual",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "id of individual to update.",
+            "schema": {
+              "$ref": "#/definitions/id"
+            }
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Failed. Bad post data."
+          }
+        }
+      }
+    },
+    "/cartodb/pha-individual/download": {
+      "post": {
+        "tags": ["CartoDB"],
+        "summary": "set of individual id to download csv",
+        "security": [
+          {
+            "ApiKey": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/IndividualIds"
+              }
+            }
+          }
+        },
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Failed. Bad post data."
           }
         }
       }
@@ -652,6 +682,17 @@
       "type:": "object",
       "properties": {
         "retailerIds": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "IndividualIds": {
+      "type:": "object",
+      "properties": {
+        "individualIds": {
           "type": "array",
           "items": {
             "type": "string"
